<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dictionary</string>
    <string name="hello_world">Dictionary application</string>
    <string name="action_settings">Settings</string>
    <string name="lang_switch">Switch lang</string>
    <string name="add_lang">Add language</string>
    <string name="text_field_hint">Enter word here and press Enter</string>
    <string name="from_lang">From</string>
    <string name="to_lang">To</string>

    <string-array name="lang_array">
        <item value="Ru">Ru</item>
        <item>En</item>
        <item>Ja</item>
        <item>De</item>
    </string-array>

    <string name="title_activity_choice_language">Choice Language</string>
    <string name="title_activity_add_word">Add Word</string>
    <string name="add_word">Add word to dictionary</string>
    <string name="action_drop_db_menu">Clear dictionary db</string>
    <string name="dialog_drop_db_message">Remove all from dictionary?</string>
    <string name="dialog_drop_db_title">Attention</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
